# legacy-code-modernization

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  USER_GUIDE.md  docker-compose.yml  pyproject.toml  requirements.txt  test_github_config.py  test_github_simple.py
agents/: README.md  analyzer.py  documentation.py  refactoring.py
bob_sessions/: code_analyzer_agent_history.md  documentation_agent_history.md  mcp_server_history.md  refactoring_agent_history.md
config/: agent_configs.yaml  orchestrate_workflow.yaml
integrations/: README.md  api.py  orchestrator.py  watsonx_client.py
mcp_server/: README.md  __init__.py  config.py  server.py  tools.py
samples/cobol/: customer_report.cbl  hello_world.cbl  payroll_system.cbl
scripts/: demo.py  quickstart.bat  quickstart.sh  run_api_server.py  run_ui.py  start_mcp_server.py  test_analyzer.py  test_documentation.py  test_orchestration.py  test_refactoring.py  test_ui.py
ui/: README.md  __init__.py  app.py
ui/components/: __init__.py  results_tab.py  settings_tab.py  upload_tab.py
ui/utils/: __init__.py
utils/: file_handler.py  github_integration.py  parsers.py  validators.py
